kube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: kube-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: kubedockerweb-service
              servicePort: 80
